--- a/index.html
+++ b/index.html
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>~</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-<input type="text" name="search" placeholder="Search with DuckDuckGo or enter address" id="search" class="tile" value="">
-<div class="tiles">
-	<div class="tile">
-		<a href="#">
-			<img src="">
-		</a>
-	</div>
-	<div class="tile">
-		<a href="#">
-			<img src="">
-		</a>
-	</div>
-	<div class="tile">
-		<a href="#">
-			<img src="">
-		</a>
-	</div>
-	<div class="tile">
-		<a href="#">
-			<img src="">
-		</a>
-	</div>
-	<div class="tile">
-		<a href="#">
-			<img src="">
-		</a>
-	</div>
-	<div class="tile">
-		<a href="#">
-			<img src="">
-		</a>
-	</div>
-	<div class="tile">
-		<a href="#">
-			<img src="">
-		</a>
-	</div>
-	<div class="tile">
-		<a href="#">
-			<img src="">
-		</a>
-	</div>
-</div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>~home</title>
+    <link rel="stylesheet" type="text/css" href="reset.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <div id="wrapper">
+      <div>
+        <h1>welcome</h1>
+      </div>
+      <div>
+        <input type="text" name="search" placeholder="search or enter address" id="search" class="tile" value="" />
+        <div class="tiles">
+          <div class="tile">
+            <a href="https://github.com/M1lken01">
+              <img src="https://avatars.githubusercontent.com/u/69786783?v=4" />
+            </a>
+          </div>
+          <div class="tile">
+            <a href="#">
+              <img src="" />
+            </a>
+          </div>
+          <div class="tile">
+            <a href="#">
+              <img src="" />
+            </a>
+          </div>
+          <div class="tile">
+            <a href="#">
+              <img src="" />
+            </a>
+          </div>
+          <div class="tile">
+            <a href="#">
+              <img src="" />
+            </a>
+          </div>
+          <div class="tile">
+            <a href="#">
+              <img src="" />
+            </a>
+          </div>
+          <div class="tile">
+            <a href="#">
+              <img src="" />
+            </a>
+          </div>
+          <div class="tile">
+            <a href="#">
+              <img src="" />
+            </a>
+          </div>
+          <div class="tile">
+            <a href="#">
+              <img src="" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="index.js" defer></script>
+  </body>
 </html>
