better tile loading and saving

--- a/index.html
+++ b/index.html
@@ -11,60 +11,14 @@
     <div id="wrapper">
       <header>
         <div class="time">
-          <h2 id="clock">16:65:14</h2>
-          <h3 id="date">Friday, November 16, 2023</h3>
+          <h2 id="clock">00:00:00</h2>
+          <h3 id="date">WeekDay, Month Day, Year</h3>
         </div>
         <h1>Welcome</h1>
       </header>
       <main>
         <input type="text" name="search" placeholder="Search or enter an address" id="search" class="tile" value="" />
-        <div class="tiles">
-          <div class="tile">
-            <a href="https://github.com/M1lken01">
-              <img src="https://avatars.githubusercontent.com/u/69786783?v=4" />
-            </a>
-          </div>
-          <div class="tile">
-            <a href="#">
-              <img src="" />
-            </a>
-          </div>
-          <div class="tile">
-            <a href="#">
-              <img src="" />
-            </a>
-          </div>
-          <div class="tile">
-            <a href="#">
-              <img src="" />
-            </a>
-          </div>
-          <div class="tile">
-            <a href="#">
-              <img src="" />
-            </a>
-          </div>
-          <div class="tile">
-            <a href="#">
-              <img src="" />
-            </a>
-          </div>
-          <div class="tile">
-            <a href="#">
-              <img src="" />
-            </a>
-          </div>
-          <div class="tile">
-            <a href="#">
-              <img src="" />
-            </a>
-          </div>
-          <div class="tile">
-            <a href="#">
-              <img src="" />
-            </a>
-          </div>
-        </div>
+        <div class="tiles"></div>
       </main>
     </div>
     <div id="circle"></div>
