--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <div id="wrapper">
       <header>
-        <div class="time">
+        <div class="time tile">
           <h2 id="clock">00:00:00</h2>
           <h3 id="date">WeekDay, Month Day, Year</h3>
         </div>
-        <h1>Welcome</h1>
+        <h1 class="tile">Welcome</h1>
       </header>
       <main>
         <input type="text" name="search" placeholder="Search or enter an address" id="search" class="tile" value="" />
