--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <input type="text" name="search" placeholder="Search or enter an address" id="search" class="tile" value="" />
         <div class="tiles"></div>
       </main>
+      <footer>
+        <a href="https://github.com/M1lken01" class="tile">&copy;</a>
+        <a href="settings.html" class="tile">&#9776;</a>
+      </footer>
     </div>
     <div id="circle"></div>
     <script src="index.js" defer></script>
