added donate icon and hover effects

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <div class="tiles"></div>
       </main>
       <footer>
-        <a href="https://github.com/M1lken01" class="tile">&copy;</a>
-        <a href="settings.html" class="tile">&#9776;</a>
+        <a href="https://github.com/M1lken01" class="tile"><span class="hover">source</span>&copy;</a>
+        <a href="https://github.com/M1lken01" class="tile"><span class="hover">donate</span>&#36;</a>
+        <a href="settings.html" class="tile"><span class="hover">settings</span>&#9776;</a>
       </footer>
     </div>
     <div id="circle"></div>
